# GitLabInstancesDataset

./: .gitlab-ci.yml  ReadMe.md  pyproject.toml
GitLabInstancesDataset/: KnownGitLabInstances.txt  __init__.py
tests/: tests.py
